# splitSAM2Amplicons

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/errors/: CMakeLists.txt  error.cpp  error.hpp
src/files/: CMakeLists.txt  files.cpp  files.hpp  input.cpp  input.hpp  output.cpp  output.hpp
src/lines/: CMakeLists.txt  category.hpp  line.cpp  line.hpp  line_pair.cpp  line_pair.hpp
